refactor CRUD for filter entity
