# internal/handlers/filter.go
@@ -2,20 +2,16 @@ package handlers
 
 import (
 	"errors"
+	"github.com/aerosystems/checkmail-service/internal/helpers"
 	"github.com/aerosystems/checkmail-service/internal/models"
-	"github.com/aerosystems/checkmail-service/pkg/validators"
 	"gorm.io/gorm"
 	"net/http"
 	"strings"
 )
 
-type TopDomainRequest struct {
-	Name     string `json:"name" example:"gmail.com"`
-	Type     string `json:"type" example:"whitelist"`
-	Coverage string `json:"coverage" example:"equals"`
-}
-
 func (h *BaseHandler) CreateFilter(w http.ResponseWriter, r *http.Request) {
+	// TODO: implement filters for customers
+	_ = WriteResponse(w, http.StatusNotImplemented, NewErrorPayload(501201, "not implemented", nil))
 	return
 }
 
@@ -24,7 +20,8 @@ func (h *BaseHandler) CreateFilter(w http.ResponseWriter, r *http.Request) {
 // @Tags topDomains
 // @Accept  json
 // @Produce application/json
-// @Param comment body TopDomainRequest true "raw request body"
+// @Param X-Api-Key header string true "api key"
+// @Param comment body DomainRequest true "raw request body"
 // @Success 201 {object} Response{data=models.Filter}
 // @Failure 400 {object} ErrorResponse
 // @Failure 409 {object} ErrorResponse
@@ -33,47 +30,18 @@ func (h *BaseHandler) CreateFilter(w http.ResponseWriter, r *http.Request) {
 // @Router /v1/filter [post]
 func (h *BaseHandler) CreateFilterReview(w http.ResponseWriter, r *http.Request) {
 	xApiKey := r.Header.Get("X-Api-Key")
-	var requestPayload TopDomainRequest
+	var requestPayload DomainRequest
 	if err := ReadRequest(w, r, &requestPayload); err != nil {
 		WriteResponse(w, http.StatusUnprocessableEntity, NewErrorPayload(422201, "could not read request body", err))
 		return
 	}
 
-	if requestPayload.Name == "" {
-		err := errors.New("name does not exists or empty")
-		_ = WriteResponse(w, http.StatusUnprocessableEntity, NewErrorPayload(422204, err.Error(), err))
+	if err := requestPayload.Validate(); err != nil {
+		WriteResponse(w, http.StatusBadRequest, NewErrorPayload(err.Code, err.Message, err.Error()))
 		return
 	}
 
-	if requestPayload.Type == "" {
-		err := errors.New("type does not exists or empty")
-		_ = WriteResponse(w, http.StatusUnprocessableEntity, NewErrorPayload(422205, err.Error(), err))
-		return
-	}
-
-	if requestPayload.Coverage == "" {
-		err := errors.New("coverage does not exists or empty")
-		_ = WriteResponse(w, http.StatusUnprocessableEntity, NewErrorPayload(422206, err.Error(), err))
-		return
-	}
-
-	if err := validators.ValidateDomainTypes(requestPayload.Type); err != nil {
-		_ = WriteResponse(w, http.StatusBadRequest, NewErrorPayload(400203, err.Error(), err))
-		return
-	}
-
-	if err := validators.ValidateDomainCoverage(requestPayload.Coverage); err != nil {
-		_ = WriteResponse(w, http.StatusBadRequest, NewErrorPayload(400203, err.Error(), err))
-		return
-	}
-
-	if err := validators.ValidateDomainName(requestPayload.Name); err != nil {
-		_ = WriteResponse(w, http.StatusBadRequest, NewErrorPayload(400204, err.Error(), err))
-		return
-	}
-
-	arrDomain := strings.Split(requestPayload.Name, ".")
-	root := arrDomain[len(arrDomain)-1]
+	root, _ := helpers.GetRootDomain(requestPayload.Name)
 	rootDomain, _ := h.rootDomainRepo.FindByName(root)
 	if rootDomain == nil {
 		err := errors.New("root domain does not exist")
