# pkg/validators/domain.go
@@ -1,7 +1,6 @@
 package validators
 
 import (
-	"fmt"
 	CustomError "github.com/aerosystems/checkmail-service/pkg/custom_error"
 	"os"
 	"regexp"
@@ -11,7 +10,7 @@ import (
 func ValidateDomainTypes(tpe string) *CustomError.Error {
 	trustTypes := strings.Split(os.Getenv("TRUST_DOMAIN_TYPES"), ",")
 	if !Contains(trustTypes, tpe) {
-		return CustomError.New(400003, fmt.Sprintf("domain type %s does not exist in trusted types", tpe))
+		return CustomError.New(400003, "domain type does not exist in trusted types")
 	}
 	return nil
 }
@@ -19,7 +18,7 @@ func ValidateDomainTypes(tpe string) *CustomError.Error {
 func ValidateDomainCoverage(coverage string) *CustomError.Error {
 	trustCoverages := strings.Split(os.Getenv("TRUST_DOMAIN_COVERAGES"), ",")
 	if !Contains(trustCoverages, coverage) {
-		return CustomError.New(400004, fmt.Sprintf("domain coverage %s does not exist in trusted coverages", coverage))
+		return CustomError.New(400004, "domain coverage does not exist in trusted coverages")
 	}
 	return nil
 }
@@ -27,7 +26,7 @@ func ValidateDomainCoverage(coverage string) *CustomError.Error {
 func ValidateDomainName(domainName string) *CustomError.Error {
 	domainRegex := regexp.MustCompile(`^(?:[_a-z0-9](?:[_a-z0-9-]{0,61}[a-z0-9])?\.)+(?:[a-z](?:[a-z0-9-]{0,61}[a-z0-9])?)?$`)
 	if !domainRegex.MatchString(domainName) {
-		return CustomError.New(400005, fmt.Sprintf("domain name %s does not valid", domainName))
+		return CustomError.New(400002, "domain name does not valid")
 	}
 	return nil
 }
